--- a/chaps.bib
+++ b/chaps.bib
@@ -1,49 +1,31 @@
+@incollection{Woolley_2020,
+	doi = {10.1016/b978-0-12-816400-6.00008-0},
+	url = {https://doi.org/10.1016%2Fb978-0-12-816400-6.00008-0},
+	year = 2020,
+	publisher = {Elsevier},
+	pages = {181--203},
+	author = {Jacqueline D. Woolley and Louise Bunce and Elizabeth A. Boerger},
+	title = {Relations between imagination and creativity},
+	booktitle = {Creativity and the Wandering Mind}
+}
 @InCollection{1,
-  title = {Freihart, B. K., & McMahon, L, Hahnel, R., & Meston, C. M., (In press). Relationship satisfaction. },
-  author = {Cindy Meston},
-  booktitle = {In: T. K. Shackelford  (Ed.), Encyclopedia of Sexual Psychology and Behavior, Springer Nature.},
-  year = {2023},
+  title = {Development of imagination and fantasy},
+  author = {Jacqueline Woolley},
+  booktitle = {Encyclopedia of Infant and Early Childhood Development, 2nd edition, vol. 1. Elsevier},
+  year = {2020},
   publisher = {.},
 }
 @InCollection{2,
-  title = {McMahon, L., Freihart, B. K., & Meston, C. M., (In press). Intimate partner sexual violence: Interventions. },
-  author = {Cindy Meston},
-  booktitle = { In: T. K. Shackelford  (Ed.), Encyclopedia of Domestic Violence.},
-  year = {2023},
+  title = {Development of the fantasy-reality distinction},
+  author = {Jacqueline Woolley},
+  booktitle = {The Cambridge Handbook of the Imagination. Cambridge University Press.},
+  year = {2020},
   publisher = {.},
 }
 @InCollection{3,
-  title = {Female Orgasmic Disorder},
-  author = {Cindy Meston},
-  booktitle = {In: A Lykins (Ed.), Encylopedia for Sexuality and Gender. New York: Springer.},
-  year = {2022},
-  publisher = {.},
-}
-@InCollection{4,
-  title = {Sexual dysfunction},
-  author = {Cindy Meston},
-  booktitle = {In: B. Kreuger & P. Blaney (Eds) Oxford Textbook of Psychopathology (4th Ed).},
-  year = {2022},
-  publisher = {.},
-}
-@InCollection{5,
-  title = {The effects of acute exercise on physiological sexual arousal in women.},
-  author = {Cindy Meston},
-  booktitle = {In: A. C. Hackney (Ed.) Sex Hormones, Exercise, and Women (2nd Ed). New York: Springer Nature.},
-  year = {2022},
-  publisher = {.},
-}
-@InCollection{6,
-  title = {Sexual satisfaction and gender differences.},
-  author = {Cindy Meston},
-  booktitle = {In: Michalos, A. C. (Ed.) Encyclopedia of Quality of Life and Well-Being Research (2nd ed). Netherlands: Springer.},
-  year = {2021},
-  publisher = {.},
-}
-@InCollection{7,
-  title = {Female Sexual Arousal Disorder},
-  author = {Cindy Meston},
-  booktitle = {In: K. S. K. Hall, & Y. M. Binik (Eds), Principles and Practice of Sex Therapy (6th Ed), (pp. 41-62). New York: The Guilford Press. },
+  title = {Relations between imagination and creativity},
+  author = {Jacqueline Woolley},
+  booktitle = {Creativity and the Wandering Mind, 1st Edition},
   year = {2020},
   publisher = {.},
 }
