--- a/pubs.bib
+++ b/pubs.bib
@@ -1,179 +1,88 @@
-@article{1Sears_2022,
-	doi = {10.1192/j.eurpsy.2022.2075},
-	url = {https://doi.org/10.1192%2Fj.eurpsy.2022.2075},
+@article{1Nissel_2022,
+	doi = {10.1017/s0140525x21002284},
+	url = {https://doi.org/10.1017%2Fs0140525x21002284},
 	year = 2022,
-	month = {jun},
-	publisher = {Royal College of Psychiatrists},
-	volume = {65},
-	number = {S1},
-	pages = {S802--S803},
-	author = {M. Sears and L. Mcmahon and C. Crosby and B. Freihart and C. Meston},
-	title = {A Multidimensional Evaluation of Intimacy},
-	journal = {European Psychiatry}
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {45},
+	author = {Jenny E. Nissel and Jacqueline D. Woolley},
+	title = {Brave new world: Imaginative fictions offer simulated safety and actual benefits},
+	journal = {Behavioral and Brain Sciences}
 }
-@article{2Freihart_2022,
-	doi = {10.1192/j.eurpsy.2022.717},
-	url = {https://doi.org/10.1192%2Fj.eurpsy.2022.717},
+@article{2Dore_2022,
+	doi = {10.1111/bjdp.12437},
+	url = {https://doi.org/10.1111%2Fbjdp.12437},
 	year = 2022,
-	month = {jun},
-	publisher = {Royal College of Psychiatrists},
-	volume = {65},
-	number = {S1},
-	pages = {S280--S280},
-	author = {B. Freihart and M. Sears and C. Meston},
-	title = {Interpersonal autonomic synchrony and sexual satisfaction: A preliminary examination},
-	journal = {European Psychiatry}
+	month = {nov},
+	publisher = {Wiley},
+	author = {Rebecca A. Dore and Jacqueline Woolley and Jenny Nissel and John G. Hixon},
+	title = {Never trust a stranger: Effects of explicit belief statements from strangers on children{\textquotesingle}s reality status beliefs and beliefs about consensus},
+	journal = {British Journal of Developmental Psychology}
 }
-@article{3Sears_Greer_2022,
-	doi = {10.1016/j.sxmr.2022.06.006},
-	url = {https://doi.org/10.1016%2Fj.sxmr.2022.06.006},
+@article{3Li_2022,
+	doi = {10.1016/j.cogdev.2022.101162},
+	url = {https://doi.org/10.1016%2Fj.cogdev.2022.101162},
 	year = 2022,
+	month = {apr},
+	publisher = {Elsevier {BV}},
+	volume = {62},
+	pages = {101162},
+	author = {Hui Li and Haoxue Yu and Jacqueline D. Woolley and Lihanjing Wu},
+	title = {The impact of informant type on children{\textquotesingle}s animal knowledge learning},
+	journal = {Cognitive Development}
+}
+@article{4Woolley_2021,
+	doi = {10.1111/cdev.13500},
+	url = {https://doi.org/10.1111%2Fcdev.13500},
+	year = 2021,
+	month = {jan},
+	publisher = {Wiley},
+	volume = {92},
+	number = {3},
+	author = {Jacqueline D. Woolley and Jenny Nissel and Ansley T. Gilpin},
+	title = {Children's Use of Testimony to Determine Reality Status},
+	journal = {Child Development}
+}
+@article{5Ghossainy_2021,
+	doi = {10.1177/1474704920986860},
+	url = {https://doi.org/10.1177%2F1474704920986860},
+	year = 2021,
+	month = {jan},
+	publisher = {{SAGE} Publications},
+	volume = {19},
+	number = {1},
+	pages = {147470492098686},
+	author = {Maliki E. Ghossainy and Laith Al-Shawaf and Jacqueline D. Woolley},
+	title = {Epistemic Vigilance in Early Ontogeny: Children's Use of Nonverbal Behavior to Detect Deception},
+	journal = {Evolutionary Psychology}
+}
+@article{6Bunce_2021,
+	doi = {10.1016/j.cogdev.2020.100979},
+	url = {https://doi.org/10.1016%2Fj.cogdev.2020.100979},
+	year = 2021,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {57},
+	pages = {100979},
+	author = {Louise Bunce and Jacqueline D. Woolley},
+	title = {Fantasy orientation and creativity in childhood: A closer look},
+	journal = {Cognitive Development}
+}
+@article{7Woolley_2020,
+	doi = {10.1037/dev0001104},
+	url = {https://doi.org/10.1037%2Fdev0001104},
+	year = 2020,
 	month = {oct},
-	publisher = {Oxford University Press ({OUP})},
-	volume = {10},
-	number = {4},
-	pages = {543--553},
-	author = {Mackenzie A. Sears-Greer and Bridget K. Friehart and Cindy M. Meston},
-	title = {A Review of Undergraduate Student Disclosures of Sexual Violence},
-	journal = {Sexual Medicine Reviews}
+	publisher = {American Psychological Association ({APA})},
+	volume = {56},
+	number = {10},
+	pages = {1866--1878},
+	author = {Jacqueline D. Woolley and Kelsey A. Kelley},
+	title = {{\textquotedblleft}When something like a ladybug lands on you{\textquotedblright}: Origins and development of the concept of luck.},
+	journal = {Developmental Psychology}
 }
-@article{4Mesk__2022,
-	doi = {10.1007/s10508-022-02380-x},
-	url = {https://doi.org/10.1007%2Fs10508-022-02380-x},
-	year = 2022,
-	month = {aug},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {51},
-	number = {8},
-	pages = {4007--4022},
-	author = {Norbert Mesk{\'{o}} and Andr{\'{a}}s N. Zsid{\'{o}} and B{\'{e}}la Birk{\'{a}}s and Cindy M. Meston and David M. Buss},
-	title = {Why Hungarians Have Sex: Development and Validation of a Brief 15-Item Instrument ({YSEX}?-15H)},
-	journal = {Archives of Sexual Behavior}
-}
-@article{5Mesk__2021,
-	doi = {10.1007/s10508-021-02072-y},
-	url = {https://doi.org/10.1007%2Fs10508-021-02072-y},
-	year = 2021,
-	month = {nov},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {51},
-	number = {1},
-	pages = {465--489},
-	author = {Norbert Mesk{\'{o}} and D{\'{o}}ra Szatm{\'{a}}ri and Andr{\'{a}}s L{\'{a}}ng and Cindy M. Meston and David M. Buss},
-	title = {Why Hungarians Have Sex ({YSEX}?-{HSF})},
-	journal = {Archives of Sexual Behavior}
-}
-@article{6Crosby_2021,
-	doi = {10.1016/j.paid.2021.110908},
-	url = {https://doi.org/10.1016%2Fj.paid.2021.110908},
-	year = 2021,
-	month = {aug},
-	publisher = {Elsevier {BV}},
-	volume = {178},
-	pages = {110908},
-	author = {Courtney L. Crosby and David M. Buss and Lawrence K. Cormack and Cindy M. Meston},
-	title = {Corrigendum to {\textquotedblleft}Sex, sexual arousal, and sexual decision making: An evolutionary perspective{\textquotedblright} [Personal. Individ. Differ., 177 (2021): 110826 Pages 1{\textendash}5]},
-	journal = {Personality and Individual Differences}
-}
-@article{7Crosby_2021,
-	doi = {10.1016/j.paid.2021.110826},
-	url = {https://doi.org/10.1016%2Fj.paid.2021.110826},
-	year = 2021,
-	month = {jul},
-	publisher = {Elsevier {BV}},
-	volume = {177},
-	pages = {110826},
-	author = {Courtney L. Crosby and David M. Buss and Lawrence K. Cormack and Cindy M. Meston},
-	title = {Sex, sexual arousal, and sexual decision making: An evolutionary perspective},
-	journal = {Personality and Individual Differences}
-}
-@article{8Handy_2020,
-	doi = {10.1080/0092623x.2020.1801542},
-	url = {https://doi.org/10.1080%2F0092623x.2020.1801542},
-	year = 2020,
-	month = {aug},
-	publisher = {Informa {UK} Limited},
-	volume = {47},
-	number = {1},
-	pages = {32--42},
-	author = {Ariel B. Handy and Cindy M. Meston},
-	title = {An Objective Measure of Vaginal Lubrication in Women With and Without Sexual Arousal Concerns},
-	journal = {Journal of Sex {\&} Marital Therapy}
-}
-@article{9Handy_2020,
-	doi = {10.1080/0092623x.2020.1758859},
-	url = {https://doi.org/10.1080%2F0092623x.2020.1758859},
-	year = 2020,
-	month = {may},
-	publisher = {Informa {UK} Limited},
-	volume = {46},
-	number = {5},
-	pages = {447--459},
-	author = {Ariel B. Handy and Bridget K. Freihart and Cindy M. Meston},
-	title = {The Relationship between Subjective and Physiological Sexual Arousal in Women with and without Arousal Concerns},
-	journal = {Journal of Sex {\&} Marital Therapy}
-}
-@article{10Kilimnik_2020,
-	doi = {10.1080/00224499.2020.1718585},
-	url = {https://doi.org/10.1080%2F00224499.2020.1718585},
-	year = 2020,
-	month = {feb},
-	publisher = {Informa {UK} Limited},
-	volume = {58},
-	number = {2},
-	pages = {261--272},
-	author = {Chelsea D. Kilimnik and Cindy M. Meston},
-	title = {Sexual Shame in the Sexual Excitation and Inhibition Propensities of Men With and Without Nonconsensual Sexual Experiences},
-	journal = {The Journal of Sex Research}
-}
-@article{11Crosby_2020,
-	doi = {10.1016/j.paid.2019.109714},
-	url = {https://doi.org/10.1016%2Fj.paid.2019.109714},
-	year = 2020,
-	month = {apr},
-	publisher = {Elsevier {BV}},
-	volume = {156},
-	pages = {109714},
-	author = {Courtney L. Crosby and Patrick K. Durkee and Cindy M. Meston and David M. Buss},
-	title = {Six dimensions of sexual disgust},
-	journal = {Personality and Individual Differences}
-}
-@article{12Meston_2019,
-	doi = {10.1016/j.jsxm.2019.10.007},
-	url = {https://doi.org/10.1016%2Fj.jsxm.2019.10.007},
-	year = 2020,
-	month = {nov},
-	publisher = {Oxford University Press ({OUP})},
-	volume = {17},
-	number = {1},
-	pages = {17--25},
-	author = {Cindy M. Meston and Bridget K. Freihart and Ariel B. Handy and Chelsea D. Kilimnik and Raymond C. Rosen},
-	title = {Scoring and Interpretation of the {FSFI}: What can be Learned From 20 Years of use?},
-	journal = {The Journal of Sexual Medicine}
-}
-@article{13Meston_2019,
-	doi = {10.1080/0092623x.2019.1654581},
-	url = {https://doi.org/10.1080%2F0092623x.2019.1654581},
-	year = 2020,
-	month = {sep},
-	publisher = {Informa {UK} Limited},
-	volume = {46},
-	number = {2},
-	pages = {141--159},
-	author = {Cindy M. Meston and Chelsea D. Kilimnik and Bridget K. Freihart and David M. Buss},
-	title = {Why Humans Have Sex: Development and Psychometric Assessment of a Short-Form Version of the {YSEX}? Instrument},
-	journal = {Journal of Sex {\&} Marital Therapy}
-}
-@article{14Seal_2020,
-	doi = {10.1016/j.sxmr.2018.03.003},
-	url = {https://doi.org/10.1016%2Fj.sxmr.2018.03.003},
-	year = 2020,
-	month = {apr},
-	publisher = {Oxford University Press ({OUP})},
-	volume = {8},
-	number = {2},
-	pages = {242--255},
-	author = {Brooke N. Seal and Cindy M. Meston},
-	title = {The Impact of Body Awareness on Women's Sexual Health: A Comprehensive Review},
-	journal = {Sexual Medicine Reviews}
+@Article{1,
+  title = {Why wearing a hat is impossible. Chinese and U.S.children's possibility judgments. Submitted},
+  author = {Jacqueline Woolley},
+  journal = {Psychological Science},
+  year = {2023},
 }
