--- a/preprints.bib
+++ b/preprints.bib
@@ -1,27 +1,162 @@
-@article{1Ashokkumar_2022,
-	doi = {10.31234/osf.io/xzr3u},
-	url = {https://doi.org/10.31234%2Fosf.io%2Fxzr3u},
+@article{1Raffington_2023,
+	doi = {10.1101/2023.01.20.524709},
+	url = {https://doi.org/10.1101%2F2023.01.20.524709},
+	year = 2023,
+	month = {jan},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Laurel Raffington and Lisa Schneper and Travis Mallard and Jonah Fisher and Liza Vinnik and Kelseanna Hollis-Hansen and Daniel A. Notterman and Elliot M. Tucker-Drob and Colter Mitchell and Kathryn P. Harden},
+	title = {Measuring the long arm of childhood in real-time: Epigenetic predictors of {BMI} and social determinants of health across childhood and adolescence}
+}
+@article{2Kun_2023,
+	doi = {10.1101/2023.01.03.521284},
+	url = {https://doi.org/10.1101%2F2023.01.03.521284},
+	year = 2023,
+	month = {jan},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Eucharist Kun and Emily M. Javan and Olivia Smith and Faris Gulamali and Javier de la Fuente and Brianna I. Flynn and Kushal Vajrala and Zoe Trutner and Prakash Jayakumar and Elliot M. Tucker-Drob and Mashaal Sohail and Tarjinder Singh and Vagheesh M. Narasimhan},
+	title = {The genetic architecture of the human skeletal form}
+}
+@article{3Raffington_2022,
+	doi = {10.1101/2022.12.07.519438},
+	url = {https://doi.org/10.1101%2F2022.12.07.519438},
+	year = 2022,
+	month = {dec},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {L. Raffington and T. Schwaba and M. Aikins and D. Richter and G.G. Wagner and K.P. Harden and D.W. Belsky and E.M. Tucker-Drob},
+	title = {Associations of Socioeconomic Disparities With Buccal {DNA}-Methylation Measures Of Biological Aging}
+}
+@article{4Yeung_2022,
+	doi = {10.1101/2022.11.22.22282621},
+	url = {https://doi.org/10.1101%2F2022.11.22.22282621},
+	year = 2022,
+	month = {nov},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Hon Wah Yeung and Aleks Stolicyn and Xueyi Shen and Mark J. Adams and Liana Romaniuk and Gladi Thng and Colin R. Buchanan and Elliot M. Tucker-Drob and Mark E. Bastin and Andrew M. McIntosh and Simon R. Cox and Keith M. Smith and Heather C. Whalley},
+	title = {Classification accuracy of structural and functional connectomes across different depressive phenotypes}
+}
+@article{5Yeung_2022,
+	doi = {10.1101/2022.03.03.22271801},
+	url = {https://doi.org/10.1101%2F2022.03.03.22271801},
 	year = 2022,
 	month = {mar},
-	publisher = {Center for Open Science},
-	author = {Ashwini Ashokkumar and William B. Swann},
-	title = {Restoring Honor by Slapping or  Disowning the Daughter}
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Hon Wah Yeung and Aleks Stolicyn and Colin R. Buchanan and Elliot M. Tucker-Drob and Mark E. Bastin and Saturnino Luz and Andrew M. McIntosh and Heather C. Whalley and Simon R. Cox and Keith Smith},
+	title = {Predicting sex, age, general cognition and mental health with machine learning on brain structural connectomes}
 }
-@article{2Ashokkumar_2020,
-	doi = {10.31234/osf.io/r9c5z},
-	url = {https://doi.org/10.31234%2Fosf.io%2Fr9c5z},
-	year = 2020,
-	month = {jul},
-	publisher = {Center for Open Science},
-	author = {Ashwini Ashokkumar and Sanaz Talaifar and William T. Fraser and Rodrigo Landabur and Michael Burhmester and {\'{A}}ngel G{\'{o}}mez and Borja Paredes and William B. Swann},
-	title = {Censoring Political Opposition Online: Who Does it and Why}
+@article{6Hatoum_2022,
+	doi = {10.1101/2022.01.06.22268753},
+	url = {https://doi.org/10.1101%2F2022.01.06.22268753},
+	year = 2022,
+	month = {jan},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Alexander S Hatoum and Sarah M.C. Colbert and Emma C Johnson and Spencer B. Huggett and Joseph D. Deak and Gita A Pathak and Mariela V. Jennings and Sarah E Paul and Nicole R. Karcher and Isabella Hansen and David A.A. Baranger and Alexis Edwards and Andrew David Grotzinger and Elliot M Tucker-Drob and Henry Kranzler and Lea K Davis and Sandra Sanchez-Roige and Renato Polimanti and Joel Gelernter and Howard J. Edenberg and Ryan Bogdan and Arpana Agrawal and},
+	title = {Multivariate genome-wide association meta-analysis of over 1 million subjects identifies loci underlying multiple substance use disorders}
 }
-@article{3Talaifar_2020,
-	doi = {10.31234/osf.io/pwcxm},
-	url = {https://doi.org/10.31234%2Fosf.io%2Fpwcxm},
-	year = 2020,
+@article{7Raffington_2021,
+	doi = {10.1101/2021.09.17.21263582},
+	url = {https://doi.org/10.1101%2F2021.09.17.21263582},
+	year = 2021,
+	month = {sep},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {L. Raffington and P. Tanksley and L. Vinnik and A. Sabhlok and M.W. Patterson and T. Mallard and M. Malanchini and Z. Ayorech and E.M. Tucker-Drob and K.P. Harden},
+	title = {Socially stratified {DNA}-methylation profiles are associated with disparities in child and adolescent mental health}
+}
+@article{8Raffington_2021,
+	doi = {10.1101/2021.08.19.456979},
+	url = {https://doi.org/10.1101%2F2021.08.19.456979},
+	year = 2021,
+	month = {aug},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {L. Raffington and P.T. Tanksley and A. Sabhlok and L. Vinnik and T. Mallard and L.S. King and B. Goosby and K.P. Harden and E.M. Tucker-Drob},
+	title = {Socially stratified epigenetic profiles are associated with cognitive functioning in children and adolescents}
+}
+@article{9de_la_Fuente_2021,
+	doi = {10.1101/2021.05.06.21256747},
+	url = {https://doi.org/10.1101%2F2021.05.06.21256747},
+	year = 2021,
 	month = {may},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Javier de la Fuente and Andrew D. Grotzinger and Riccardo E. Marioni and Michel G. Nivard and Elliot M. Tucker-Drob},
+	title = {Multivariate Modeling of Direct and Proxy {GWAS} Indicates Substantial Common Variant Heritability of Alzheimer's Disease}
+}
+@article{10Grotzinger_2021,
+	doi = {10.1101/2021.04.30.21256409},
+	url = {https://doi.org/10.1101%2F2021.04.30.21256409},
+	year = 2021,
+	month = {may},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Andrew D. Grotzinger and Javier de la Fuente and Gail Davies and Michel G. Nivard and Elliot M. Tucker-Drob},
+	title = {Transcriptome-wide and Stratified Genomic Structural Equation Modeling Identify Neurobiological Pathways Underlying General and Specific Cognitive Functions}
+}
+@article{11Buchanan_2021,
+	doi = {10.1101/2021.04.23.21256000},
+	url = {https://doi.org/10.1101%2F2021.04.23.21256000},
+	year = 2021,
+	month = {apr},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Colin R. Buchanan and Susana Mu{\~{n}}oz Maniega and Maria C. Vald{\'{e}}s Hern{\'{a}}ndez and Lucia Ballerini and Gayle Barclay and Adele M. Taylor and Tom C. Russ and Elliot M. Tucker-Drob and Joanna M. Wardlaw and Ian J. Deary and Mark E. Bastin and Simon R. Cox},
+	title = {Comparison of structural {MRI} brain measures between 1.5T and 3T: data from the Lothian Birth Cohort 1936}
+}
+@article{12Domingue_2021,
+	doi = {10.31234/osf.io/932fm},
+	url = {https://doi.org/10.31234%2Fosf.io%2F932fm},
+	year = 2021,
+	month = {apr},
 	publisher = {Center for Open Science},
-	author = {Sanaz Talaifar and Michael Buhrmester and Ozlem Ayduk and william swann},
-	title = {Asymmetries in mutual understanding: People with low status, power, and self-esteem understand better than they are understood}
+	author = {Benjamin Domingue and Klint Kanopka and Sam Trejo and Mijke Rhemtulla and Elliot M. Tucker-Drob},
+	title = {Ubiquitous bias {\&} false discovery due to model misspecification in analysis of statistical interactions: The role of the outcome{\textquotesingle}s distribution and metric properties}
+}
+@article{13Howe_2021,
+	doi = {10.1101/2021.03.05.433935},
+	url = {https://doi.org/10.1101%2F2021.03.05.433935},
+	year = 2021,
+	month = {mar},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Laurence J Howe and Michel G Nivard and Tim T Morris and Ailin F Hansen and Humaira Rasheed and Yoonsu Cho and Geetha Chittoor and Penelope A Lind and Teemu Palviainen and Matthijs D van der Zee and Rosa Cheesman and Massimo Mangino and Yunzhang Wang and Shuai Li and Lucija Klaric and Scott M Ratliff and Lawrence F Bielak and Marianne Nygaard and Chandra A Reynolds and Jared V Balbona and Christopher R Bauer and Dorret I Boomsma and Aris Baras and Archie Campbell and Harry Campbell and Zhengming Chen and Paraskevi Christofidou and Christina C Dahm and Deepika R Dokuru and Luke M Evans and Eco JC de Geus and Sudheer Giddaluru and Scott D Gordon and K. Paige Harden and Alexandra Havdahl and W. David Hill and Shona M Kerr and Yongkang Kim and Hyeokmoon Kweon and Antti Latvala and Liming Li and Kuang Lin and Pekka Martikainen and Patrik KE Magnusson and Melinda C Mills and Deborah A Lawlor and John D Overton and Nancy L Pedersen and David J Porteous and Jeffrey Reid and Karri Silventoinen and Melissa C Southey and Travis T Mallard and Elliot M Tucker-Drob and Margaret J Wright and John K Hewitt and Matthew C Keller and Michael C Stallings and Kaare Christensen and Sharon LR Kardia and Patricia A Peyser and Jennifer A Smith and James F Wilson and John L Hopper and Sara Hägg and Tim D Spector and Jean-Baptiste Pingault and Robert Plomin and Meike Bartels and Nicholas G Martin and Anne E Justice and Iona Y Millwood and Kristian Hveem and {\O}yvind Naess and Cristen J Willer and Bj{\o}rn Olav {\AA}svold and Philipp D Koellinger and Jaakko Kaprio and Sarah E Medland and Robin G Walters and Daniel J Benjamin and Patrick Turley and David M Evans and George Davey Smith and Caroline Hayward and Ben Brumpton and Gibran Hemani and Neil M Davies and   and},
+	title = {Within-sibship {GWAS} improve estimates of direct genetic effects}
+}
+@article{14Grotzinger_2021,
+	doi = {10.1101/2021.09.22.21263909},
+	url = {https://doi.org/10.1101%2F2021.09.22.21263909},
+	year = 2021,
+	month = {sep},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Andrew D. Grotzinger and Javier de la Fuente and Michel G. Nivard and Elliot M. Tucker-Drob},
+	title = {Pervasive Downward Bias in Estimates of Liability Scale Heritability in {GWAS} Meta-Analysis: A Simple Solution}
+}
+@article{15Linn_r_2020,
+	doi = {10.1101/2020.10.16.342501},
+	url = {https://doi.org/10.1101%2F2020.10.16.342501},
+	year = 2020,
+	month = {oct},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Richard Karlsson Linn{\'{e}}r and Travis T. Mallard and Peter B. Barr and Sandra Sanchez-Roige and James W. Madole and Morgan N. Driver and Holly E. Poore and Andrew D. Grotzinger and Jorim J. Tielbeek and Emma C. Johnson and Mengzhen Liu and Hang Zhou and Rachel L. Kember and Joëlle A. Pasman and Karin J.H. Verweij and Dajiang J. Liu and Scott Vrieze and Henry R. Kranzler and Joel Gelernter and Kathleen Mullan Harris and Elliot M. Tucker-Drob and Irwin Waldman and Abraham A. Palmer and K. Paige Harden and Philipp D. Koellinger and Danielle M. Dick and},
+	title = {Multivariate genomic analysis of 1.5 million people identifies genes related to addiction, antisocial behavior, and health}
+}
+@article{16Grotzinger_2020,
+	doi = {10.1101/2020.09.22.20196089},
+	url = {https://doi.org/10.1101%2F2020.09.22.20196089},
+	year = 2020,
+	month = {sep},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Andrew D. Grotzinger and Travis T. Mallard and Wonuola A. Akingbuwa and Hill F. Ip and Mark J. Adams and Cathryn M. Lewis and Andrew M. McIntosh and Jakob Grove and S{\o}ren Dalsgaard and Klaus-Peter Lesch and Nora Strom and Sandra M. Meier and Manuel Mattheisen and Anders D. B{\o}rglum and Ole Mors and Gerome Breen and Phil H. Lee and Kenneth S. Kendler and Jordan W. Smoller and Elliot M. Tucker-Drob and Michel G. Nivard and   and   and   and},
+	title = {Genetic Architecture of 11 Major Psychiatric Disorders at Biobehavioral, Functional Genomic, and Molecular Genetic Levels of Analysis}
+}
+@article{17Demange_2020,
+	doi = {10.1101/2020.01.14.905794},
+	url = {https://doi.org/10.1101%2F2020.01.14.905794},
+	year = 2020,
+	month = {jan},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Perline A. Demange and Margherita Malanchini and Travis T. Mallard and Pietro Biroli and Simon R. Cox and Andrew D. Grotzinger and Elliot M. Tucker-Drob and Abdel Abdellaoui and Louise Arseneault and Avshalom Caspi and David Corcoran and Benjamin Domingue and Colter Mitchell and Elsje van Bergen and Dorret I. Boomsma and Kathleen M. Harris and Hill F. Ip and Terrie E. Moffitt and Richie Poulton and Joseph Prinz and Karen Sugden and Jasmin Wertz and Benjamin Williams and Eveline L. de Zeeuw and Daniel W. Belsky and K. Paige Harden and Michel G. Nivard},
+	title = {Investigating the Genetic Architecture of Non-Cognitive Skills Using {GWAS}-by-Subtraction}
+}
+@article{18Domingue_2020,
+	doi = {10.1101/2020.09.08.287888},
+	url = {https://doi.org/10.1101%2F2020.09.08.287888},
+	year = 2020,
+	month = {sep},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Benjamin W. Domingue and Klint Kanopka and Travis T. Mallard and Sam Trejo and Elliot M. Tucker-Drob},
+	title = {Distinguishing between interaction and dispersion effects in the analysis of gene-environment interaction}
 }
